--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 
 .cabecalho {
-    background-color: aqua;
-    color: aqua;
+    background-color: #1f9696;
+    color: rgb(31, 150, 150);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -20,4 +20,12 @@ width: 20%;
     display: inline-block;
     margin: 0 16px;
     font-size: 24px;
+}
+
+.escola-imagem{
+    width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient(#1f9696,#134EBF);
 }
