--- a/style.css
+++ b/style.css
@@ -28,4 +28,15 @@ width: 20%;
 
 .escola{
     background-image: linear-gradient(#1f9696,#134EBF);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+.escola-div-conteudo{
+    width: 35%;
+}
+.escola-titulo{
+    padding: 24px 0;
 }
